<resources>
    <string name="app_name">TiuShop</string>

    <!-- Toast -->
    <string name="toast1">Signup successfully!</string>
    <string name="toast2">Product added to wishlist ❤</string>
    <string name="toast3">Product removed from wishlist</string>
    <string name="toast4">Product added to cart</string>
    <!-- Toast -->


    <!-- Intro screen -->
    <string name="tvSkip">Skip</string>
    <string name="btnNext">Next</string>
    <string name="tvTitle">Title</string>
    <string name="btnStart">Shopping Now</string>

    <string-array name="tvTitle">
        <item>Shopping Online</item>
        <item>Product Detail</item>
        <item>Easy Search</item>
        <item>Easy Payment</item>
    </string-array>

    <string-array name="tvHint">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in augue nec ligula condimentum vestibulum. Donec cursus justo non elit sollicitudin sagittis. Donec blandit lorem eget nunc pellentesque.</item>
        <item>Pellentesque in augue nec ligula condimentum vestibulum. Donec cursus justo non elit sollicitudin sagittis. Donec blandit lorem eget nunc pellentesque, vel sagittis leo cursus. Aliquam erat volutpat.</item>
        <item>Pellentesque in augue nec ligula condimentum vestibulum. Donec cursus justo non elit sollicitudin sagittis. Donec blandit lorem eget nunc pellentesque, vel sagittis leo cursus. Aliquam erat volutpat.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in augue nec ligula condimentum vestibulum. Donec cursus justo non elit sollicitudin sagittis. Donec blandit.</item>
    </string-array>
    <!--    <string name="tvHint">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>-->
    <!-- Intro screen -->


    <!-- Login screen, Signup screen -->
    <string name="tvWelcome">Welcome to TiuShop</string>
    <string name="tvLogin">Login</string>
    <string name="tvSignup">Sign up</string>

    <string name="tilUsername">Username</string>
    <string name="tilPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="tvOr">Or</string>


    <string name="tvError0">Error. Please try again</string>

    <string name="tvError1">* Please enter username</string>
    <string name="tvError2">* Please enter password</string>
    <string name="tvError3">* Please enter name</string>
    <string name="tvError4">* Please enter confirm password</string>

    <string name="tvError5">* Username invalid</string>-->
    <string name="tvError6">* Display name must be at least 6 characters long</string>-->
    <string name="tvError7">* Password invalid (Password must be at least 6 characters, no white spaces, must contain at least one numeric char, must contain 1 capital letter)</string>
    <string name="tvError8">* Confirm password doesn\'t match</string>
    <string name="tvError9">Login fail! Please check your username and password again</string>

    <string name="tilName">Display name</string>
    <string name="btnSignup">Sign Up</string>
    <string name="tilConfirmPassword">Confirm Password</string>

    <!-- Login screen, Signup screen -->


    <!-- MainActivity screen -->
    <string name="edtHint1">TiuShop</string>
    <string name="menuActionShop">Shop</string>
    <string name="menuActionCollection">Collections</string>
    <string name="menuActionUser">Me</string>

    <string name="tvAlertTitle">Notice</string>
    <string name="tvAlertMessage">Are you sure you want to sign up?</string>
    <string name="tvAlertMessage1">Are you sure you want to delete this product?</string>
    <string name="tvAlertButton1">OK</string>
    <string name="tvAlertButton2">Cancel</string>
    <string name="tvAlertButton3">Delete</string>
    <string name="tvAmount">0</string>
    <string name="tvAmountOverSize">99+</string>
    <!-- MainActivity screen -->

    <!-- Fragment Home -->
    <string name="tvMan">Man</string>
    <string name="tvWoman">Woman</string>
    <string name="tvMW">Man and Woman</string>

    <string name="tvNew">New</string>
    <string name="tvSale">Sale</string>
    <string name="tvName">Name</string>
    <!-- Fragment Home -->


    <!-- Item Product -->
    <string name="tvPrice"><strike>0</strike></string>
    <string name="tvFinalPrice">0</string>
    <!-- Item Product -->

    <!-- SuccessActivity -->
    <string name="tvContent">Content</string>
    <string name="tvSCSignUp">Signup successfully!</string>
    <string name="btnOK1">Login Now!</string>
    <!-- SuccessActivity -->

    <!-- ProductDetail Activity -->
    <string name="btnAddToCart">Add To Cart</string>
    <string name="tvQuantity">1</string>
    <string name="tvSize">Size:</string>

    <string-array name="size">
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>
    <!-- ProductDetail Activity -->


    <!-- Item Collection -->
    <string name="tvCollection">Collection</string>
    <!-- Item Collection -->

    <!-- Cart Activity -->
    <string name="tbCart">Cart</string>
    <string name="tvDelete">Delete</string>
    <string name="cbAll">All</string>
    <string name="btnCheckOut">Checkout</string>
    <string name="tvTotal">Total:</string>
    <!-- Cart Activity -->


</resources>