<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srlSwipeToDelete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:dragEdge="right"
    app:mode="same_level">

    <!-- Second layout -->
    <FrameLayout
        android:id="@+id/flDelete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?attr/color_main_5"
        android:foreground="?selectableItemBackground"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_trash" />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tvDelete"
                android:textAlignment="center"
                android:textColor="?attr/color_main_3"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>


    <!-- Main layout -->
    <FrameLayout
        android:id="@+id/flProductInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/color_2"
        android:foreground="?selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbProductCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:buttonTint="?attr/color_main_1"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@null" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cslProductImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/cbProductCart">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdvProductImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:roundedCornerRadius="10dp" />

                <LinearLayout
                    android:id="@+id/llSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_sale_corner_10dp_bottomleft_topright"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvSale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tvSale"
                        android:textAlignment="center"
                        android:textColor="?attr/color_main_3"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <RelativeLayout
                android:id="@+id/llProductInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cslProductImage"
                android:layout_alignBottom="@+id/cslProductImage"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/cslProductImage">

                <TextView
                    android:id="@+id/tvProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@string/tvName"
                    android:textColor="?attr/color_3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvProductName"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvProductPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/tvPrice"
                        android:textColor="?attr/color_4"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvProductFinalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/tvFinalPrice"
                        android:textColor="?attr/color_main_5"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/tvSize"
                        android:textColor="?attr/color_4"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="?attr/color_3"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llProductInfo"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabDecrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/color_main_1"
                    android:elevation="5dp"
                    app:backgroundTint="?attr/color_main_1"
                    app:fabCustomSize="30dp"
                    app:srcCompat="@drawable/ic_minus"
                    app:tint="@null" />

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxWidth="30dp"
                    android:text="@string/tvQuantity"
                    android:textColor="?attr/color_3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabIncrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/color_main_1"
                    android:elevation="5dp"
                    app:backgroundTint="?attr/color_main_1"
                    app:fabCustomSize="30dp"
                    app:srcCompat="@drawable/ic_plus"
                    app:tint="@null" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>